--- a/css/day-4/login.html
+++ b/css/day-4/login.html
@@ -24,7 +24,7 @@
                 <label for="password" style="display: block;">
                     Password
                 </label>
-                <input type="text" placeholder="Enter Your username here..." id="password" style="display: block;">
+                <input type="text" placeholder="Enter Your password here..." id="password" style="display: block;">
             </div>
 
             <button class="btn">Login</button>
